add outside_power_report and unit test
