# db/schema.rb
@@ -12,11 +12,11 @@
 
 ActiveRecord::Schema[7.2].define(version: 2024_11_26_095606) do
   create_table "e_transportations", force: :cascade do |t|
-    t.string "e_transportation_type"
+    t.string "type"
     t.string "sensor_type"
     t.integer "owner_id", null: false
-    t.boolean "in_zone"
-    t.boolean "lost_sensor"
+    t.boolean "in_zone", default: false, null: false
+    t.boolean "lost_sensor", default: false, null: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
     t.index ["owner_id"], name: "index_e_transportations_on_owner_id"
